# StitchCV

./: .env.example  .gitignore  Dockerfile  README.md  add_credits.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  list_gemini_models.py  mass_rename.py  nohup.out  pyproject.toml  run_on_server.sh  setup.py  test_vector.py
chroma_db/283ffa36-ad73-4afd-a6a9-4d0b9f3feeb6/: index_metadata.pickle
data/: master_resume.json  profile.json
docs/: llm_architecture.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
hireflow/: __init__.py  api.py  auth.py  config.py  main.py
hireflow/agents/: __init__.py  application.py  base_agent.py  cover_letter.py  jd_analyzer.py  job_discovery.py  logging_memory.py  resume_tailor.py
hireflow/models/: __init__.py  application.py  database.py  job.py  resume.py  user.py  vector_db.py
hireflow/scrapers/: __init__.py  base_scraper.py  linkedin_scraper.py
hireflow/services/: __init__.py  browser_service.py  gemini_client.py
hireflow/utils/: __init__.py  document_parser.py  resume_pdf.py  retry.py
hireflow/workflows/: resume_tailor_graph.py
stichcv/: __init__.py  api.py  auth.py  config.py  main.py
stichcv/agents/: __init__.py  application.py  base_agent.py  cover_letter.py  jd_analyzer.py  job_discovery.py  logging_memory.py  resume_tailor.py
stichcv/models/: __init__.py  application.py  billing.py  job.py  (+4 more)
stitchcv/: __init__.py  api.py  auth.py  config.py  main.py
tests/: test_agents.py  test_document_parser.py  test_resume_scoring.py
(+53 files in other folders)
